<resources>
    <string name="app_name">a woman</string>
    <string name="sum_all_money">جمع کل هزینه‌ها</string>
    <string name="todo">TODO</string>
    <string name="new_price">هزینه جدید</string>
    <string name="no_price">هزینه‌ای وارد نکردید</string>
    <string name="first_price">اولین هزینه‌ی بارداریت رو وارد کن</string>
    <string name="submit_new_cost"> ثبت هزینه جدید </string>
    <string name="title_cost">عنوان هزینه</string>
    <string name="sample_title_hint_cost">مثلا هزینه سیسمونی</string>
    <string name="price">مبلغ</string>
    <string name="count">تعداد</string>
    <string name="grop">گروه</string>
    <string name="select">انتخاب کنید</string>
    <string name="manegment_grop">مدیریت گروها</string>
    <string name="cancel">انصراف</string>
    <string name="all">همه</string>
    <string name="before_childbirth">قبل از زایمان</string>
    <string name="For_clearance">جهت ترخیص</string>
    <string name="lermEpisom">لورم ایپسوم</string>
    <string name="select_group">انتخاب گروه</string>
    <string name="sample_group">مثلا گروه سیسمونی</string>
    <string name="create_grop">ایجاد گروه</string>
    <string name="description_delete">با حذف گروه، هزینه‌های اون گروه هم حذف میشه. آیا از حذف گروه مطمئنی؟</string>
    <string name="description_delete_cost">با حذف هزینه . تمامی اطلاعات ان در داخل برنامه پاک میشود. آیا از حذف هزینه مطمئنی؟</string>
    <string name="add_new_group">ثبت گروه جدید</string>
    <string name="edite_group">ویرایش گروه</string>
    <string name="meassage_edite_succes">گروه با موفقیت ویرایش شد</string>
    <string name="meassage_cost_succes">هزینه با موفقیت ویرایش شد</string>
    <string name="message_delete_Succec">گروه با موفقیت حذف شد</string>
    <string name="message_delete_Cost_Succec">هزینه با موفقیت حذف شد</string>
    <string name="message_succec_create">گروه با موفقیت ایجاد شد</string>
    <string name="message_succec_create_cost">هزینه با موفقیت ایجاد شد</string>
    <string name="not_emptyNameGroup">نام گروه نباید خالی باشد</string>
    <string name="place_enter_title">لطفا عنوان را وارد کنید</string>
    <string name="place_enter_price">لطفا مبلغ را وارد کنید</string>
    <string name="EditeCost">ویرایش هزینه</string>
    <string name="Edite">ویرایش </string>
</resources>