<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="390dp"
    android:layoutDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                >
                <TextView
                    android:id="@+id/tv_title_add_newCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_new_cost"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/iranb"
                    android:gravity="right"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_cost"
                    android:textColor="@color/gray2"
                    android:textSize="12sp"
                    android:includeFontPadding="false"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/iranb"
                    android:gravity="right"

                    />
                <EditText
                    android:id="@+id/ed_title_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="45dp"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:fontFamily="@font/iran"
                    android:paddingRight="8dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:hint="@string/sample_title_hint_cost"
                    android:background="@drawable/shape_stroke_editext_dialog"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.3"
                        android:text="@string/price"
                        android:layout_marginTop="16sp"
                        android:textColor="@color/gray2"
                        android:textSize="12sp"
                        android:fontFamily="@font/iran_m"
                        />
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/count"
                        android:layout_marginTop="16sp"
                        android:textColor="@color/gray2"
                        android:textSize="12sp"
                        android:fontFamily="@font/iran_m"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="56dp">
                    <EditText
                        android:id="@+id/ed_price_dialog"
                        android:layout_width="0dp"
                        android:layout_weight="2.3"
                        android:layout_height="wrap_content"
                        android:minHeight="45dp"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"
                        android:inputType="number"
                        android:textSize="14sp"
                        android:imeOptions="actionNext"
                        android:fontFamily="@font/iran"
                        android:paddingRight="12dp"
                        android:gravity="center_vertical|left"
                        android:paddingLeft="12dp"
                        android:hint="تومان"
                        android:background="@drawable/shape_stroke_editext_dialog"
                        />
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        />
                    <EditText
                        android:id="@+id/ed_count_Dialog"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="45dp"
                        android:inputType="number"
                        android:layout_marginTop="8dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/iran"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:paddingRight="8dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:paddingLeft="8dp"
                        android:hint="1"
                        android:background="@drawable/shape_stroke_editext_dialog"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grop"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/gray2"
                    android:textSize="12sp"
                    android:fontFamily="@font/iran_m"
                    />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                    <FrameLayout
                        android:id="@+id/frame_tv_dialog_select_group"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:layout_weight="2.3">
                        <TextView
                            android:id="@+id/tv_dialog_select_group"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/select"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:background="@drawable/shape_stroke_editext_dialog"
                            android:textSize="12sp"
                            android:fontFamily="@font/iran_m"
                            />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        />
                    <TextView
                        android:id="@+id/btn_manage_group"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/manegment_grop"
                        android:textColor="@color/colorTextMoney"
                        android:clickable="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:fontFamily="@font/iran_m"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:focusable="true" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/select"
                    android:layout_marginTop="16sp"
                    android:textColor="@color/gray2"
                    android:textSize="12sp"
                    android:fontFamily="@font/iran_m"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shape_stroke_editext_dialog"
                android:layout_height="56dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_newCost"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/submit_new_cost"
                    android:textColor="@color/colorTextMoney"
                    android:textSize="12sp"
                    android:fontFamily="@font/iran_m"
                    />
                <FrameLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/divider"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel_add_new_cost"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/cancel"
                    android:textColor="@color/colorHint"
                    android:textSize="12sp"
                    android:fontFamily="@font/iran_m"
                    />

            </LinearLayout>
        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>